frontend/src/ui/select/select.css
@supports (-webkit-appearance: none) or (-moz-appearance: none) {
	.c-select {
		-webkit-appearance: none;
		-moz-appearance: none;
		line-height: 24px;
		border: none;
		padding: 0;
		margin: 0;
		height: 36px;
		font-size: 12px;
		background: var(--gray-0);
		border: 1px solid var(--gray-2);
		padding: 0 var(--spacing-xs);
		width: 150px;
		text-overflow: ellipsis;
		padding-right: var(--spacing-s);
		cursor: pointer;
	}

	.c-select-wrapper {
		position: relative;
	}

	.c-select-wrapper::after {
		position: absolute;
		content: "";
		top: 12px;
		right: 8px;
		height: 8px;
		width: 8px;
		border: 2px solid var(--gray-10);
		border-left: none;
		border-top: none;
		transform: rotate(45deg);
	}
}

